--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,17 +1,14 @@
 spring:
   mail:
-    host: stmp@gmail.com
+    host: smtp.gmail.com
     port: 587
-    username: ${EMAIL_USERNAME}
-    password: ${EMAIL_PASSWORD}
-    properties:
-      mail.stmp.auth: true
-      mail.stmp.starttls.enable: true
+    username: ahn479512@gmail.com
+    password: jin89434795
 
-  #      properties:
-#      mail.smtp.auth: true
-#      mail.smtp.starttls.enable: true
+
   jpa:
+    hibernate:
+      ddl-auto: create
     database: mysql
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     generate-ddl: false
