--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     host: smtp.gmail.com
     port: 587
     username: ahn479512@gmail.com
-    password: jin89434795
+    password: ${MAIL_PASSWORD}
 
 
   jpa:
