--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -5,6 +5,7 @@ spring:
     generate-ddl: false
     show-sql: false
   datasource:
+    sql-script-encoding: UTF-8
     url: jdbc:h2:mem:testdb;MODE=mysql
     driver-class-name: org.h2.Driver
     username: sa
