--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -19,3 +19,6 @@ spring:
       port: 587
       username: ahn479512@gmail.com
       password: ${MAIL_PASSWORD}
+server:
+  address: 0.0.0.0
+  port: 8090
