--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,6 +15,11 @@ spring:
   output:
     ansi:
       enabled: always
+  data:
+    web:
+      pageable:
+        one-indexed-parameters: true
+
 server:
   address: 0.0.0.0
   port: 8080
